<?xml version="1.0"?>
<package>
  <name>fw_wrapper</name>
  <version>0.0.0</version>
  <description>Wrapper for Bioloid Firmware</description>

  <maintainer email="taichung2014@u.northwestern.edu">Tai Won Chung</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/fw_wrapper</url>

  <author email="taichung2014@u.northwestern.edu">Tai Won Chung</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
